src/main/java/com/generator/generators/mysql/parser/MySQLParser.java
// Generated from src/com/generator/generators/mysql/parser/MySQL.g4 by ANTLR 4.1
package com.generator.generators.mysql.parser;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNSimulator;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MySQLParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__164=1, T__163=2, T__162=3, T__161=4, T__160=5, T__159=6, T__158=7, 
		T__157=8, T__156=9, T__155=10, T__154=11, T__153=12, T__152=13, T__151=14, 
		T__150=15, T__149=16, T__148=17, T__147=18, T__146=19, T__145=20, T__144=21, 
		T__143=22, T__142=23, T__141=24, T__140=25, T__139=26, T__138=27, T__137=28, 
		T__136=29, T__135=30, T__134=31, T__133=32, T__132=33, T__131=34, T__130=35, 
		T__129=36, T__128=37, T__127=38, T__126=39, T__125=40, T__124=41, T__123=42, 
		T__122=43, T__121=44, T__120=45, T__119=46, T__118=47, T__117=48, T__116=49, 
		T__115=50, T__114=51, T__113=52, T__112=53, T__111=54, T__110=55, T__109=56, 
		T__108=57, T__107=58, T__106=59, T__105=60, T__104=61, T__103=62, T__102=63, 
		T__101=64, T__100=65, T__99=66, T__98=67, T__97=68, T__96=69, T__95=70, 
		T__94=71, T__93=72, T__92=73, T__91=74, T__90=75, T__89=76, T__88=77, 
		T__87=78, T__86=79, T__85=80, T__84=81, T__83=82, T__82=83, T__81=84, 
		T__80=85, T__79=86, T__78=87, T__77=88, T__76=89, T__75=90, T__74=91, 
		T__73=92, T__72=93, T__71=94, T__70=95, T__69=96, T__68=97, T__67=98, 
		T__66=99, T__65=100, T__64=101, T__63=102, T__62=103, T__61=104, T__60=105, 
		T__59=106, T__58=107, T__57=108, T__56=109, T__55=110, T__54=111, T__53=112, 
		T__52=113, T__51=114, T__50=115, T__49=116, T__48=117, T__47=118, T__46=119, 
		T__45=120, T__44=121, T__43=122, T__42=123, T__41=124, T__40=125, T__39=126, 
		T__38=127, T__37=128, T__36=129, T__35=130, T__34=131, T__33=132, T__32=133, 
		T__31=134, T__30=135, T__29=136, T__28=137, T__27=138, T__26=139, T__25=140, 
		T__24=141, T__23=142, T__22=143, T__21=144, T__20=145, T__19=146, T__18=147, 
		T__17=148, T__16=149, T__15=150, T__14=151, T__13=152, T__12=153, T__11=154, 
		T__10=155, T__9=156, T__8=157, T__7=158, T__6=159, T__5=160, T__4=161, 
		T__3=162, T__2=163, T__1=164, T__0=165, DEFAULTCHARSET=166, LINE_COMMENT=167, 
		COMMENT=168, ID=169, INT=170, WS=171;
	public static final String[] tokenNames = {
		"<INVALID>", "'ROW_FORMAT='", "'default'", "'INTEGER'", "'MATCH SIMPLE'", 
		"'CONSTRAINT'", "'USING'", "'ID'", "'set'", "'LONGBLOB'", "'ON UPDATE'", 
		"'MATCH FULL'", "'DECIMAL'", "'TINYTEXT'", "'DEFAULT CHARSET='", "'='", 
		"'COMMENT='", "'MEDIUMBLOB'", "'int'", "'on update'", "'binary'", "'BOOL'", 
		"','", "'PRIMARY'", "'MIN_ROWS='", "'RTREE'", "'modify'", "'DEFAULT CURRENT_TIMESTAMP'", 
		"'CURRENT_TIMESTAMP'", "'<'", "'//'", "'RESTRICT'", "'SMALLINT'", "'CHARACTER SET'", 
		"'TIMESTAMP'", "'BIT'", "'COMMENT'", "'+'", "'CREATE'", "'not null'", 
		"'NO ACTION'", "'primary key'", "'as'", "'AS'", "'datetime'", "'WHERE'", 
		"'integer'", "'INTO'", "'ON DELETE'", "';'", "'HASH'", "'PACK_KEYS='", 
		"'NOT NULL'", "'MATCH PARTIAL'", "'from'", "'IF EXISTS'", "'''", "'*'", 
		"'SELECT'", "'longtext'", "'ENGINE'", "'TEXT'", "'BINARY'", "'MODIFY'", 
		"'INT'", "'AUTO_INCREMENT'", "'CHAR'", "':'", "'INDEX'", "'COLLATE='", 
		"'select'", "'FIXED'", "'now()'", "'ALTER'", "'timestamp'", "'table'", 
		"'auto_increment'", "'FLOAT'", "'into'", "')'", "'CHECKSUM='", "'SET'", 
		"'FOREIGN KEY'", "'DOUBLE'", "'TIME'", "'CASCADE'", "'FROM'", "'alter'", 
		"'float'", "'REFERENCES'", "'DELAY_KEY_WRITE='", "'insert'", "'SET NULL'", 
		"'MAX_ROWS='", "'ZEROFILL'", "'COLLATE'", "'database'", "'bigint'", "'UNIQUE'", 
		"'null'", "'('", "'column'", "'AUTO_INCREMENT='", "'LONGTEXT'", "'DELIMITER'", 
		"'CAST'", "'foreign key'", "'DEFAULT b'0''", "'VARCHAR'", "'unique'", 
		"'UPDATE'", "'BTREE'", "'if exists'", "'BIGINT'", "'varchar'", "'DATETIME'", 
		"'ignore'", "'@'", "'tinyint'", "'IF NOT EXISTS'", "'INSERT'", "'TINYINT'", 
		"'NULL'", "'UNSIGNED'", "'/'", "'COLUMN'", "'TABLE'", "'unsigned'", "'CONNECTION='", 
		"'create'", "'DEFAULT'", "'bit'", "'BLOB'", "'NOT'", "'TYPE'", "'`'", 
		"'cast'", "'double'", "'ADD'", "'constraint'", "'KEY'", "'update'", "'MEDIUMTEXT'", 
		"'.'", "'DROP'", "'PRIMARY KEY'", "'add'", "'NOW()'", "'DATE'", "'key'", 
		"'DYNAMIC'", "'drop'", "'>'", "'where'", "'USE'", "'%'", "'IN'", "'\"'", 
		"'in'", "'DATABASE'", "'IGNORE'", "'not'", "'ENUM'", "'-'", "'references'", 
		"'index'", "DEFAULTCHARSET", "LINE_COMMENT", "COMMENT", "ID", "INT", "WS"
	};
	public static final int
		RULE_database = 0, RULE_createDatabase = 1, RULE_createTableStatement = 2, 
		RULE_alterTableStatement = 3, RULE_addColumn = 4, RULE_modifyColumn = 5, 
		RULE_dropColumn = 6, RULE_addIndex = 7, RULE_dropIndex = 8, RULE_addConstraint = 9, 
		RULE_procedure = 10, RULE_updateStatement = 11, RULE_insertStatement = 12, 
		RULE_selectStatement = 13, RULE_procedureContent = 14, RULE_tableConstraint = 15, 
		RULE_primaryKey = 16, RULE_primaryKeyCol = 17, RULE_uniqueKey = 18, RULE_uniqueKeyCol = 19, 
		RULE_indexKey = 20, RULE_indexKeyCol = 21, RULE_foreignKey = 22, RULE_referencesDefinition = 23, 
		RULE_referencesAction = 24, RULE_referenceOption = 25, RULE_indexType = 26, 
		RULE_columnSpecification = 27, RULE_nullable = 28, RULE_columnDefinition = 29, 
		RULE_autoIncrement = 30, RULE_defaultValue = 31, RULE_dataType = 32, RULE_tableOption = 33, 
		RULE_rowFormat = 34, RULE_onUpdate = 35, RULE_colName = 36, RULE_name = 37;
	public static final String[] ruleNames = {
		"database", "createDatabase", "createTableStatement", "alterTableStatement", 
		"addColumn", "modifyColumn", "dropColumn", "addIndex", "dropIndex", "addConstraint", 
		"procedure", "updateStatement", "insertStatement", "selectStatement", 
		"procedureContent", "tableConstraint", "primaryKey", "primaryKeyCol", 
		"uniqueKey", "uniqueKeyCol", "indexKey", "indexKeyCol", "foreignKey", 
		"referencesDefinition", "referencesAction", "referenceOption", "indexType", 
		"columnSpecification", "nullable", "columnDefinition", "autoIncrement", 
		"defaultValue", "dataType", "tableOption", "rowFormat", "onUpdate", "colName", 
		"name"
	};

	@Override
	public String getGrammarFileName() { return "MySQL.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }


	   public void createTable(String name) { };

	   public void procedure(String name) { };

	   public void newColumn(String name) { };

	   public void column(String type, boolean nullable, String defaultValue, String onUpdate, String autoIncrement) { };

	   public void primaryKeyColumn(String column) { };

	   public void primaryKeyType(String indexType) { };

	   public void newUniqueKey() { };

	   public void uniqueKey(String name) { };

	   public void uniqueKeyIndex(String indexType) { };

	   public void uniqueKeyColumn(String column) { };

	   public void newIndexKey() { };

	   public void indexKey(String name) { };

	   public void indexKeyIndex(String indexType) { };

	   public void indexKeyColumn(String column) { };

	   public void newConstraint() { };

	   public void foreignKey(String name) { };

	   public void foreignKeyColumn(String column) { };

	   public void foreignKeyReference(String refTable, String refColumn) { };

	   public void foreignKeyOnDelete(String onDelete) { };

	   public void foreignKeyOnUpdate(String onUpdate) { };

	   public void tableOption(String name, String value) { };

	   public void tableCreated() { };

	   public void done() { };
	   
	   static String prepDefaultValue(String val) {
	      if (val == null) return null;
	      val = val.substring("DEFAULT ".length());
	      return val.equals("'00000000'") ? "'0000-00-00'" : val;
	   }

	   static String prepComment(String val) {
	      if (val == null || val.length() == 0) return null;
	      val = val.startsWith("'") ? val.substring(1, val.length() - 1) : val;
	      return val;
	   }	

	   public static TokenStream createLexer(java.io.Reader reader) throws java.io.IOException {
		  final ANTLRInputStream input = new ANTLRInputStream(reader);
		  final MySQLLexer lexer = new MySQLLexer(input);
		  return new CommonTokenStream(lexer);
	   }

	public MySQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class DatabaseContext extends ParserRuleContext {
		public List<TerminalNode> COMMENT() { return getTokens(MySQLParser.COMMENT); }
		public List<AlterTableStatementContext> alterTableStatement() {
			return getRuleContexts(AlterTableStatementContext.class);
		}
		public List<UpdateStatementContext> updateStatement() {
			return getRuleContexts(UpdateStatementContext.class);
		}
		public List<CreateDatabaseContext> createDatabase() {
			return getRuleContexts(CreateDatabaseContext.class);
		}
		public InsertStatementContext insertStatement(int i) {
			return getRuleContext(InsertStatementContext.class,i);
		}
		public CreateTableStatementContext createTableStatement(int i) {
			return getRuleContext(CreateTableStatementContext.class,i);
		}
		public ProcedureContext procedure(int i) {
			return getRuleContext(ProcedureContext.class,i);
		}
		public UpdateStatementContext updateStatement(int i) {
			return getRuleContext(UpdateStatementContext.class,i);
		}
		public List<InsertStatementContext> insertStatement() {
			return getRuleContexts(InsertStatementContext.class);
		}
		public List<ProcedureContext> procedure() {
			return getRuleContexts(ProcedureContext.class);
		}
		public List<TerminalNode> LINE_COMMENT() { return getTokens(MySQLParser.LINE_COMMENT); }
		public TerminalNode COMMENT(int i) {
			return getToken(MySQLParser.COMMENT, i);
		}
		public CreateDatabaseContext createDatabase(int i) {
			return getRuleContext(CreateDatabaseContext.class,i);
		}
		public List<CreateTableStatementContext> createTableStatement() {
			return getRuleContexts(CreateTableStatementContext.class);
		}
		public TerminalNode LINE_COMMENT(int i) {
			return getToken(MySQLParser.LINE_COMMENT, i);
		}
		public AlterTableStatementContext alterTableStatement(int i) {
			return getRuleContext(AlterTableStatementContext.class,i);
		}
		public DatabaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_database; }
	}

	public final DatabaseContext database() throws RecognitionException {
		DatabaseContext _localctx = new DatabaseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_database);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=1 && _alt!=-1 ) {
				if ( _alt==1+1 ) {
					{
					setState(87);
					switch (_input.LA(1)) {
					case LINE_COMMENT:
						{
						setState(76); match(LINE_COMMENT);
						}
						break;
					case COMMENT:
						{
						setState(77); match(COMMENT);
						}
						break;
					case 38:
					case 49:
					case 73:
					case 87:
					case 91:
					case 104:
					case 110:
					case 120:
					case 129:
					case 141:
					case 144:
					case 151:
					case 154:
						{
						setState(85);
						switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
						case 1:
							{
							setState(78); createDatabase();
							}
							break;

						case 2:
							{
							setState(79); createTableStatement();
							}
							break;

						case 3:
							{
							setState(80); alterTableStatement();
							}
							break;

						case 4:
							{
							setState(81); procedure();
							}
							break;

						case 5:
							{
							setState(82); updateStatement();
							}
							break;

						case 6:
							{
							setState(83); insertStatement();
							}
							break;

						case 7:
							{
							setState(84); match(49);
							}
							break;
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(91);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateDatabaseContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public CreateDatabaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createDatabase; }
	}

	public final CreateDatabaseContext createDatabase() throws RecognitionException {
		CreateDatabaseContext _localctx = new CreateDatabaseContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_createDatabase);
		int _la;
		try {
			setState(104);
			switch (_input.LA(1)) {
			case 38:
			case 129:
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				_la = _input.LA(1);
				if ( !(_la==38 || _la==129) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(93);
				_la = _input.LA(1);
				if ( !(_la==96 || _la==159) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(95);
				_la = _input.LA(1);
				if (_la==119) {
					{
					setState(94); match(119);
					}
				}

				setState(97); name();
				setState(98); match(49);
				}
				break;
			case 154:
				enterOuterAlt(_localctx, 2);
				{
				setState(100); match(154);
				setState(101); name();
				setState(102); match(49);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateTableStatementContext extends ParserRuleContext {
		public NameContext name;
		public ColumnSpecificationContext columnSpecification(int i) {
			return getRuleContext(ColumnSpecificationContext.class,i);
		}
		public TableConstraintContext tableConstraint(int i) {
			return getRuleContext(TableConstraintContext.class,i);
		}
		public TableOptionContext tableOption(int i) {
			return getRuleContext(TableOptionContext.class,i);
		}
		public List<ColumnSpecificationContext> columnSpecification() {
			return getRuleContexts(ColumnSpecificationContext.class);
		}
		public List<TableOptionContext> tableOption() {
			return getRuleContexts(TableOptionContext.class);
		}
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public List<TableConstraintContext> tableConstraint() {
			return getRuleContexts(TableConstraintContext.class);
		}
		public CreateTableStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createTableStatement; }
	}

	public final CreateTableStatementContext createTableStatement() throws RecognitionException {
		CreateTableStatementContext _localctx = new CreateTableStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_createTableStatement);
		int _la;
		try {
			int _alt;
			setState(147);
			switch (_input.LA(1)) {
			case 144:
			case 151:
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				_la = _input.LA(1);
				if ( !(_la==144 || _la==151) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(107);
				_la = _input.LA(1);
				if ( !(_la==75 || _la==126) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(109);
				_la = _input.LA(1);
				if (_la==55 || _la==112) {
					{
					setState(108);
					_la = _input.LA(1);
					if ( !(_la==55 || _la==112) ) {
					_errHandler.recoverInline(this);
					}
					consume();
					}
				}

				setState(111); name();
				}
				break;
			case 38:
			case 129:
				enterOuterAlt(_localctx, 2);
				{
				setState(112);
				_la = _input.LA(1);
				if ( !(_la==38 || _la==129) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(113);
				_la = _input.LA(1);
				if ( !(_la==75 || _la==126) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(115);
				_la = _input.LA(1);
				if (_la==119) {
					{
					setState(114); match(119);
					}
				}

				setState(117); ((CreateTableStatementContext)_localctx).name = name();
				 createTable((((CreateTableStatementContext)_localctx).name!=null?_input.getText(((CreateTableStatementContext)_localctx).name.start,((CreateTableStatementContext)_localctx).name.stop):null).substring(0,(((CreateTableStatementContext)_localctx).name!=null?_input.getText(((CreateTableStatementContext)_localctx).name.start,((CreateTableStatementContext)_localctx).name.stop):null).length()-1));
				setState(119); match(100);
				setState(120); columnSpecification();
				setState(125);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				while ( _alt!=2 && _alt!=-1 ) {
					if ( _alt==1 ) {
						{
						{
						setState(121); match(22);
						setState(122); columnSpecification();
						}
						} 
					}
					setState(127);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				}
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==22) {
					{
					{
					setState(128); match(22);
					setState(129); tableConstraint();
					}
					}
					setState(134);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(135); match(79);
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 1) | (1L << 14) | (1L << 16) | (1L << 24) | (1L << 51) | (1L << 60))) != 0) || ((((_la - 69)) & ~0x3f) == 0 && ((1L << (_la - 69)) & ((1L << (69 - 69)) | (1L << (80 - 69)) | (1L << (90 - 69)) | (1L << (93 - 69)) | (1L << (102 - 69)) | (1L << (128 - 69)))) != 0) || _la==134) {
					{
					{
					setState(136); tableOption();
					}
					}
					setState(141);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(143);
				switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
				case 1:
					{
					setState(142); match(49);
					}
					break;
				}
				 tableCreated(); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AlterTableStatementContext extends ParserRuleContext {
		public List<AddColumnContext> addColumn() {
			return getRuleContexts(AddColumnContext.class);
		}
		public List<ModifyColumnContext> modifyColumn() {
			return getRuleContexts(ModifyColumnContext.class);
		}
		public AddIndexContext addIndex(int i) {
			return getRuleContext(AddIndexContext.class,i);
		}
		public DropIndexContext dropIndex(int i) {
			return getRuleContext(DropIndexContext.class,i);
		}
		public DropColumnContext dropColumn(int i) {
			return getRuleContext(DropColumnContext.class,i);
		}
		public AddColumnContext addColumn(int i) {
			return getRuleContext(AddColumnContext.class,i);
		}
		public List<DropColumnContext> dropColumn() {
			return getRuleContexts(DropColumnContext.class);
		}
		public ModifyColumnContext modifyColumn(int i) {
			return getRuleContext(ModifyColumnContext.class,i);
		}
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public List<AddConstraintContext> addConstraint() {
			return getRuleContexts(AddConstraintContext.class);
		}
		public AddConstraintContext addConstraint(int i) {
			return getRuleContext(AddConstraintContext.class,i);
		}
		public List<AddIndexContext> addIndex() {
			return getRuleContexts(AddIndexContext.class);
		}
		public List<DropIndexContext> dropIndex() {
			return getRuleContexts(DropIndexContext.class);
		}
		public AlterTableStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alterTableStatement; }
	}
